Actualizar URL del socket de chat a https://jquery-chat.zeabur.app/ en index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
       $(function () {
-        const socket = io("http://localhost:3000");
+        const socket = io("https://jquery-chat.zeabur.app/");
         $("#form").submit(function (event) {
           event.preventDefault();
           socket.emit("Mensaje de chat", $("#input").val());
