--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         margin-right: 10px;
         height: 125px;
         resize: none;
+        border-radius: 25px;
       }
     </style>
   </head>
