--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         margin-right: 10px;
         height: 125px;
         resize: none;
-        border-radius: 25px;
+        border-radius: 15px;
+        padding: 5px;
       }
     </style>
   </head>
