--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Chat en tiempo real</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
       html {
         color-scheme: dark light;
@@ -10,32 +11,35 @@
         place-content: center;
       }
       #chat-box {
-        width: 300px;
-        height: 400px;
+        width: 800px;
+        height: 450px;
         border: 1px solid #ccc;
         padding: 2px;
         margin: 0 auto;
         overflow-y: auto;
         margin-bottom: 15px;
+        margin-top: 15px;
       }
       #form {
         display: flex;
         justify-content: center;
         align-items: center;
-        max-width: 300px;
+        max-width: 800px;
         margin: auto;
       }
       #input {
         flex-grow: 1;
         margin-right: 10px;
+        padding: 5px;
       }
       #chat-box {
         border-radius: 25px;
+        padding: 5px;
       }
       #messages {
         display: flex;
         flex-direction: column;
-        gap: 7px;
+        gap: 15px;
         padding: 0;
         font-size: 16px;
         text-wrap: balance;
@@ -70,25 +74,51 @@
         border-radius: 15px;
         padding: 5px;
       }
-
-
+      #username-input {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        width: 350px;
+      }
+      #username {
+        padding: 5px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        width: 350px;
+      }
+      #submit-username {
+        padding-inline: 10px;
+        padding-block: 5px;
+        border-radius: 5px;
+        background-color: dimgrey;
+        color: white;
+      }
     </style>
   </head>
   <body>
-    <div id="username-input">
-      <input
-        type="text"
-        id="username"
-        placeholder="Nombre de usuario de GitHub"
-      />
-      <button id="submit-username">Ingresar</button>
-    </div>
+    <section class="flex flex-col justify-center items-center gap-5">
+      <h1 id="title" class="text-5xl">Acceder a la sala pública</h1>
+      <div id="username-input">
+        <input
+          type="text"
+          id="username"
+          placeholder="Nombre de usuario de GitHub"
+          required
+        />
+        <button id="submit-username">Ingresar</button>
+      </div>
+    </section>
     <div id="chat-box" style="display: none">
       <ul id="messages"></ul>
     </div>
     <form id="form" style="display: none">
-      <textarea id="input" autocomplete="off"></textarea>
-      <button>ENVIAR</button>
+      <textarea id="input" class="resize-none" autocomplete="off"></textarea>
+      <button
+        class="bg-slate-200 px-2 py-1 rounded-lg text-black hover:bg-slate-400 transition-all duration-300 ease-in-out border-2 border-white"
+      >
+        ENVIAR
+      </button>
     </form>
     <script src="https://cdn.socket.io/4.1.2/socket.io.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -97,6 +127,7 @@
         let username = "";
         $("#submit-username").click(function () {
           username = $("#username").val();
+          $("#title").text(`Bienvenido, ${username}`);
           $("#username-input").hide();
           $("#chat-box").show();
           $("#form").show();
@@ -104,7 +135,12 @@
         const socket = io("https://chat-jquery.onrender.com/");
         $("#form").submit(function (event) {
           event.preventDefault();
-          socket.emit("Mensaje de chat", { text: $("#input").val(), username });
+          const messageText = $("#input").val();
+          if (messageText.trim() === "") {
+            alert("El mensaje no puede estar vacío");
+            return;
+          }
+          socket.emit("Mensaje de chat", { text: messageText, username });
           $("#input").val("");
         });
         socket.on("Mensaje de chat", function (msg) {
